# python-project-83

./: .gitignore  Makefile  README.md  database.sql  project.txt  pyproject.toml
.github/workflows/: lint.yml  sonar.yml
page_analyzer/: app.py  db.py  parser.py  url_normalizer.py
page_analyzer/templates/: index.html  url.html  urls.html
tests/: test_app.py
