[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]